# blog

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css  package.json  posts.json  style.css
.github/workflows/: deploy.yml
scripts/: generate-posts.js
src/: main.rs
src/components/: header.rs  home.rs  mod.rs  post_viewer.rs  router.rs
src/lib/: posts.rs
src/models/: post.rs
